bk_ida/gobmkida/c2/attack2
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack2/src/engine/reading.c:3255:29: error: use of undeclared identifier 'byte_9B389F'
&& v14 != ( unsigned __int8)byte_9B389F[v15] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack2/src/engine/reading.c:3256:29: error: use of undeclared identifier 'byte_9B388C'
&& v14 != ( unsigned __int8)byte_9B388C[v15] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack2/src/engine/reading.c:3566:23: error: use of undeclared identifier 'unk_4945F3'
v44 = ( const char *)&unk_4945F3; 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack2/src/engine/reading.c:3630:7: error: use of undeclared identifier 'byte_9B389F'
if ( !byte_9B389F[v73] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack2/src/engine/reading.c:3650:7: error: use of undeclared identifier 'byte_9B388C'
if ( !byte_9B388C[v73] ) 
      ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/attack2/src/obj/1/reading.o] Error 1
